--- a/Database/docker-compose.yml
+++ b/Database/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: admin
       MYSQL_USER: admin
-      MYSQL_PASSWORD: admin 
+      MYSQL_PASSWORD: admin
       MYSQL_DATABASE: injob
+    ports:
+      - 3306:3306
 
   adminer:
     image: adminer
@@ -22,4 +24,3 @@ services:
     restart: always
     ports:
       - 8080:8080
- 
