--- a/Database/docker-compose.yml
+++ b/Database/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.1'
 services:
   db:
     image: mysql:5.7
+    container_name: mysqlInjob
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
     # (this is just an example, not intended to be a production configuration)
     command: --default-authentication-plugin=mysql_native_password
