--- a/Database/docker-compose.yml
+++ b/Database/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3.1'
 services:
   db:
     image: mysql:5.7
-    container_name: mysqlInjob
+    container_name: inJob_mysql
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
     # (this is just an example, not intended to be a production configuration)
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
-      - ./ressources/injob.sql:/docker-entrypoint-initdb.d/injob.sql
+    # Je crée Tables directement avec Sequelize
+      # - ./ressources/injob.sql:/docker-entrypoint-initdb.d/injob.sql
       - /var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: admin
@@ -21,7 +22,7 @@ services:
 
   adminer:
     image: adminer
-    container_name: admirerInjob
+    container_name: inJob_admirer
     restart: always
     ports:
       - 8080:8080
