--- a/Back/apiV2/package.json
+++ b/Back/apiV2/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "nodemon server.js",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
@@ -23,6 +24,12 @@
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1",
-    "supertest": "^6.3.0"
+    "super,test": "^6.3.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
