--- a/Back/apiV2/config/config.json
+++ b/Back/apiV2/config/config.json
@@ -9,9 +9,9 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "admin",
+    "database": "injob",
+    "host": "",
     "dialect": "mysql"
   },
   "production": {
