--- a/Back/apiV2/package.json
+++ b/Back/apiV2/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
@@ -24,7 +27,7 @@
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1",
-    "super,test": "^6.3.0"
+    "supertest": "^6.3.0"
   },
   "jest": {
     "testEnvironment": "node",
