--- a/Back/apiV2/package.json
+++ b/Back/apiV2/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^6.24.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1",
