--- a/Front/package.json
+++ b/Front/package.json
@@ -10,14 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "tiny-cookie": "^2.3.2",
     "vue": "^2.6.14",
+    "vue-cookie": "^1.1.4",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "axios": "^0.21.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
